<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_yellow"
    android:id="@+id/cl_app_background"
    >


    <TextView
        android:id="@+id/tv_weather_title"
        style="@style/WeatherTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_171"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Cloudy" />

    <ImageView
        android:id="@+id/iv_weather_icon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="@dimen/margin_15"
        android:src="@drawable/ic_cloud"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_weather_title"
        app:layout_constraintBottom_toTopOf="@id/tv_temperature"
        />

    <TextView
        android:id="@+id/tv_temperature"
        style="@style/TemperatureStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15"
        android:text="@string/temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_weather_icon" />

    <LinearLayout
        android:id="@+id/ll_current_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_temperature">

        <TextView
            android:id="@+id/tv_week_day"
            style="@style/DateTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8dp"
            tools:text="Sunday" />

        <View
            android:layout_width="@dimen/_1dp"
            android:layout_height="@dimen/size_24dp"
            android:layout_gravity="center"
            android:background="@color/white" />

        <TextView
            android:id="@+id/tv_date_year"
            style="@style/DateTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            tools:text="12 Dec 2023" />
    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_current_date"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bg_hourly_forecast"
        android:layout_marginHorizontal="9dp"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tv_24_hour_forecast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/_24_hour_forecast"
            style="@style/HourlyTextStyleTemperature"
            app:drawableStartCompat="@drawable/ic_watch"
            android:drawablePadding="@dimen/_4dp"
            android:layout_margin="@dimen/_12dp"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_hourly_forecast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_41dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_24_hour_forecast"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_hourly"
            />

        <Button
            android:id="@+id/btn_five_day_forecast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_5_day_forecast"
            android:layout_marginHorizontal="@dimen/_89dp"
            style="@style/ButtonStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/margin_15"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>