<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_app_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/dark_yellow">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_14dp"
        android:layout_marginTop="@dimen/_33dp"
        android:background="@drawable/input_field_bg"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:maxLines="1"
        app:endIconTint="@color/white"
        app:hintEnabled="false"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_33dp"
            android:background="@drawable/input_field_bg"
            android:hint="@string/search_city"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            />

    </com.google.android.material.textfield.TextInputLayout>



    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/cv_hourly_forecast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            layout="@layout/content_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_48dp"
            />
    </com.facebook.shimmer.ShimmerFrameLayout>


    <TextView
        android:id="@+id/tv_weather_title"
        style="@style/WeatherTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tl_search"
        tools:text="Cloudy" />

    <ImageView
        android:id="@+id/iv_weather_icon"
        android:layout_width="@dimen/_64dp"
        android:layout_height="@dimen/_64dp"
        android:layout_marginTop="@dimen/margin_15"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@id/tv_temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_weather_title"
        tools:src="@drawable/ic_cloud" />

    <TextView
        android:id="@+id/tv_temperature"
        style="@style/TemperatureStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_weather_icon"
        tools:text="@string/temperature" />

    <LinearLayout
        android:id="@+id/ll_current_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_temperature">

        <TextView
            android:id="@+id/tv_week_day"
            style="@style/DateTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8dp"
            tools:text="Sunday" />

        <View
            android:layout_width="@dimen/_1dp"
            android:layout_height="@dimen/size_24dp"
            android:layout_gravity="center"
            android:background="@color/white" />

        <TextView
            android:id="@+id/tv_date_year"
            style="@style/DateTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            tools:text="12 Dec 2023" />

        <View
            android:layout_width="@dimen/_1dp"
            android:layout_height="@dimen/size_24dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/margin_8dp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/tv_location"
            style="@style/DateTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Asia/Bishkek" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cv_hourly_forecast"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="9dp"
        android:layout_marginBottom="@dimen/_10dp"
        android:background="@drawable/bg_hourly_forecast"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_current_date">

        <TextView
            android:id="@+id/tv_24_hour_forecast"
            style="@style/HourlyTextStyleTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12dp"
            android:drawablePadding="@dimen/_4dp"
            android:text="@string/_24_hour_forecast"
            app:drawableStartCompat="@drawable/ic_watch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_41dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_24_hour_forecast">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <include layout="@layout/item_hourly_placeholder" />

                <include layout="@layout/item_hourly_placeholder" />

                <include layout="@layout/item_hourly_placeholder" />

                <include layout="@layout/item_hourly_placeholder" />

                <include layout="@layout/item_hourly_placeholder" />
            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_hourly_forecast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_41dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_24_hour_forecast"
            tools:listitem="@layout/item_hourly" />

        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/HourlyTextStyleTemperature"
            android:text="@string/add_city"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>